[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/menus/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ZenAntiqueSoft-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/background/seasons/spring/2_spring_river.png" type="Texture" id=3]
[ext_resource path="res://assets/background/default_bg.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 82
font_data = ExtResource( 2 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = -154.0
margin_right = 583.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MenuContainer"]
margin_right = 437.0
margin_bottom = 100.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true

[node name="EndlessButton" type="Button" parent="MenuContainer"]
margin_top = 104.0
margin_right = 437.0
margin_bottom = 204.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
text = "Endless Mode"
flat = true

[node name="HelpButton" type="Button" parent="MenuContainer"]
margin_top = 208.0
margin_right = 437.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 2 )
text = "Tutorial"
flat = true

[node name="QuitButton" type="Button" parent="MenuContainer"]
margin_top = 312.0
margin_right = 437.0
margin_bottom = 412.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="BackgroundCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="BackgroundCanvasLayer"]
margin_right = 3840.0
margin_bottom = 2160.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RiverCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="RiverCanvasLayer"]
margin_right = 3840.0
margin_bottom = 2160.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1015.0
margin_top = 274.0
margin_bottom = 411.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Nature's Crescendo[/center]"
text = "Nature's Crescendo"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MenuContainer/EndlessButton" to="." method="_on_EndlessButton_pressed"]
[connection signal="pressed" from="MenuContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
